--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,12 +1,12 @@
-fastapi==0.111.0
-uvicorn[standard]==0.29.0
-pydantic==2.7.1
-pydantic-settings==2.2.1
-SQLAlchemy==2.0.30
-alembic==1.13.1
-psycopg2-binary==2.9.9
-passlib[bcrypt]==1.7.4
-PyJWT==2.8.0
-fastapi-mail==1.4.1
-requests==2.31.0
-python-dotenv==1.0.1
+fastapi
+uvicorn[standard]
+pydantic
+pydantic-settings
+SQLAlchemy
+alembic
+psycopg2-binary
+bcrypt
+PyJWT
+fastapi-mail
+requests
+python-dotenv
