--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -45,4 +45,4 @@ jobs:
         npm run build
       env:
         # Provide any necessary mock environment variables to make the build pass
-        NEXT_PUBLIC_API_BASE_URL: "https://api.memorahq.com" 
+        NEXT_PUBLIC_API_BASE_URL: "http://memora-alb-902286918.us-west-2.elb.amazonaws.com" 
